--- a/main.html
+++ b/main.html
@@ -7,29 +7,25 @@
 </head>
 
 <body>
-	  <div class="container">
-    <div id="playersForm">
-      <h1>Enter Players</h1>
-      <input type="text" id="player-1" placeholder="Enter Player 1 name">
-      <input type="text" id="player-2" placeholder="Enter Player 2 name">
-      <button id="submit">Start Game</button>
-    </div>
+	<div class="container">
+    <h1>Tic Tac Toe</h1>
 
-    <!-- Game Board -->
-    <div class="board" id="gameBoard">
-      <h1>Tic Tac Toe</h1>
-      <div class="message" id="message"></div>
-      <div class="grid">
-        <div class="cell" id="1"></div>
-        <div class="cell" id="2"></div>
-        <div class="cell" id="3"></div>
-        <div class="cell" id="4"></div>
-        <div class="cell" id="5"></div>
-        <div class="cell" id="6"></div>
-        <div class="cell" id="7"></div>
-        <div class="cell" id="8"></div>
-        <div class="cell" id="9"></div>
-      </div>
+    <input type="text" id="player1" placeholder="Enter Player 1 Name">
+    <input type="text" id="player2" placeholder="Enter Player 2 Name">
+    <button id="submit">Submit</button>
+
+    <div class="message"></div>
+
+    <div id="board" class="board">
+      <div class="cell" id="1"></div>
+      <div class="cell" id="2"></div>
+      <div class="cell" id="3"></div>
+      <div class="cell" id="4"></div>
+      <div class="cell" id="5"></div>
+      <div class="cell" id="6"></div>
+      <div class="cell" id="7"></div>
+      <div class="cell" id="8"></div>
+      <div class="cell" id="9"></div>
     </div>
   </div>
 	<!-- the entire body must be written by student -->
